Fix: Excluded the TV layout from the scrolling list margin fix to prevent overflow

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -676,11 +676,11 @@ html {
     padding-top: 1.25em !important;
 }
 
-#itemDetailPage .emby-scroller-container,
-#itemDetailPage .emby-scroller,
-#itemDetailPage .scrollX {
-    margin-inline: -5%;
-    padding-inline: 5%;
+html:not(.layout-tv) #itemDetailPage .emby-scroller-container,
+html:not(.layout-tv) #itemDetailPage .emby-scroller,
+html:not(.layout-tv) #itemDetailPage .scrollX {
+    margin-inline: calc(-1 * var(--sidePadding));
+    padding-inline: var(--sidePadding);
 }
 
 .layout-desktop .emby-scroller-container,
